@@ -1,6 +1,6 @@
 /******************************************************************************
  * Top contributors (to current version):
- *   Andrew Reynolds, Morgan Deters, Aina Niemetz
+
  *
  * This file is part of the cvc5 project.
  *
@@ -366,6 +366,11 @@ class CVC5_EXPORT SmtEngine
    * @throw TypeCheckingException, LogicException, UnsafeInterruptException
    */
   Result assertFormula(const Node& formula, bool inUnsatCore = true);
+
+  /**
+   * Reduce an unsatisfiable core to make it minimal.
+   */
+  std::vector<Node> reduceUnsatCore(const std::vector<Node>& core);
 
   /**
    * Check if a given (set of) expression(s) is entailed with respect to the
